This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - Bug Fixes
            - fixed missing graphs in reports
            - fixed js error in panorama url panel

1.82     Thu Feb 13 00:01:36 CET 2014
          - naemon adjustments
          - performance improvments on pages not using any backends (reports, bp, conf,...)
          - removed old reporting plugin
          - install ssi examples
          - add plugin_output and long_plugin_output filter (awiddersheim)
          - CLI
            - added -a ALL option to send commands to all backends
          - Logcache
            - added 'logcacheremoveunused' command to remove old no longer used tables
          - Panorama
            - make tabs reorderable
            - autohiding headers don't change panel size
            - fixed problem on initializing pie charts
            - fixed import problem not showing initial panels
          - Business Process
            - change service plugin output for first node
            - add livestatus result transport
            - added cli command "bpcommit" to save manually create BPs
            - fixed displaying/using wrong host template
          - Reports
            - show out of scope totals
            - added report description on cover page
            - support outages pages for multiple host/service reports
            - fill in defaults for host/service unavailable states when switching report templates
            - use timeperiods when calculation outage logs
            - allow service reports over the same service on all hosts
            - fixed livestatus timestamp for timeperiod transitions
            - fixed pnp graphs in reports when using remote instances and services containing spaces
            - fixed problem with daylight saving times
            - fixed selecting wrong tab on rescheduling report
            - fixed removing reports from non-existing templates
          - Config Tool