@@ -345,10 +345,17 @@ sub _process_details_page {
     # get all services
     my $services = $c->{'db'}->get_services( filter => [ Thruk::Utils::Auth::get_auth_filter( $c, 'services' ), $servicefilter ], sort => { $backend_order => $sortoptions->{$sortoption}->[0] }, pager => 1, columns => $columns  );
 
-    if(scalar @{$services} == 0) {
+    if(scalar @{$services} == 0 and !$c->stash->{'has_service_filter'}) {
         # try to find matching hosts, maybe we got some hosts without service
         my $host_stats = $c->{'db'}->get_host_stats( filter => [ Thruk::Utils::Auth::get_auth_filter( $c, 'hosts' ), $hostfilter ] );
         $c->stash->{'num_hosts'} = $host_stats->{'total'};
+
+        # redirect to host details page if there are hosts but no service filter
+        if($c->stash->{'num_hosts'} > 0) {
+            my $url = $c->stash->{'url_prefix'}.'cgi-bin/'.Thruk::Utils::Filter::uri_with($c, {'style' => 'hostdetail'});
+            $url =~ s/&amp;/&/gmx;
+            return $c->response->redirect($url)
+        }
     }
 
     if( $view_mode eq 'xls' ) {
